<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.OrderDetailsFragment">

    <com.nextforce.jetservedriver.common.views.AppBarView
        android:id="@+id/toolbarItemOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingClass" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgDriver"
        android:layout_width="@dimen/_28sdp"
        android:layout_height="@dimen/_28sdp"
        android:layout_margin="@dimen/_7sdp"
        android:background="@color/gray"
        android:src="@drawable/ic_person"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarItemOrder"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.Image.CircleImage" />

    <TextView
        android:id="@+id/txtDriverName"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_2sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:ellipsize="end"
        android:gravity="start"
        android:padding="@dimen/_8sdp"
        android:text="Driver name Mohamed"
        android:textColor="@color/black"
        android:textSize="@dimen/_10ssp"
        app:layout_constraintBottom_toBottomOf="@id/imgDriver"
        app:layout_constraintEnd_toStartOf="@id/imgDriverPhone"
        app:layout_constraintStart_toEndOf="@id/imgDriver"
        app:layout_constraintTop_toTopOf="@id/imgDriver"
        tools:text="Driver Not Assigned Yet" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgDriverPhone"
        android:layout_width="@dimen/_26sdp"
        android:layout_height="@dimen/_26sdp"
        android:layout_margin="@dimen/_6sdp"
        android:background="@drawable/bg_white"
        android:padding="@dimen/_4sdp"
        android:src="@drawable/ic_phone"
        app:layout_constraintBottom_toBottomOf="@id/imgDriver"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/txtDriverName"
        app:layout_constraintTop_toTopOf="@id/imgDriver" />

    <TextView
        android:id="@+id/txtDriverNotAssigned"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/white_T"
        android:gravity="center"
        android:text="@string/driver_not_assigned_yet"
        android:textColor="@color/darkRed"
        android:textSize="@dimen/_12ssp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@id/imgDriver"
        app:layout_constraintTop_toBottomOf="@id/toolbarItemOrder" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/constraintTotalPrice"
        app:layout_constraintTop_toBottomOf="@id/imgDriver">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constAddNewSubOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/txtReservedTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginTop="@dimen/_6sdp"
                android:gravity="center_vertical"
                android:padding="@dimen/_6sdp"
                android:text="@string/reserved_time"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                app:drawableTint="@color/primary"
                app:fontFamily="@font/roboto_bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtReservedTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_6sdp"
                android:layout_marginEnd="@dimen/_6sdp"
                android:background="@null"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/reserved_time"
                android:paddingStart="@dimen/_6sdp"
                android:paddingTop="@dimen/_6sdp"
                android:paddingBottom="@dimen/_6sdp"
                android:textAllCaps="false"
                android:textColor="@color/primary"
                android:textSize="@dimen/_10ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtReservedTime"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvItemOrder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtReservedTime"
                tools:itemCount="5"
                tools:listitem="@layout/item_add_new_sub_order" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintTotalPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_top_corner_white"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/totalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:drawableStart="@drawable/ic_money"
            android:drawablePadding="@dimen/_6sdp"
            android:gravity="start"
            android:text="@string/total_amount"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toStartOf="@id/txtTotalAmount"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTotalAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="end"
            android:textColor="@color/primary"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/totalAmount"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="578 EGP" />

        <TextView
            android:id="@+id/totalFeesPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:drawableStart="@drawable/ic_money"
            android:drawablePadding="@dimen/_6sdp"
            android:gravity="start"
            android:text="@string/total_fees"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toStartOf="@id/txtTotalFeesPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtTotalAmount" />

        <TextView
            android:id="@+id/txtTotalFeesPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="end"
            android:textColor="@color/primary"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/totalFeesPrice"
            app:layout_constraintTop_toBottomOf="@id/txtTotalAmount"
            tools:text="578 EGP" />

        <TextView
            android:id="@+id/totalPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_3sdp"
            android:drawableStart="@drawable/ic_money"
            android:drawablePadding="@dimen/_6sdp"
            android:gravity="start"
            android:text="@string/total_price"
            android:textColor="@color/black"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toStartOf="@id/txtTotalPrice"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/totalFeesPrice" />

        <TextView
            android:id="@+id/txtTotalPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="end"
            android:textColor="@color/primary"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/totalPrice"
            app:layout_constraintTop_toBottomOf="@id/totalFeesPrice"
            tools:text="578 EGP" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>